Wrote about co-design

--- a/aalto.bib
+++ b/aalto.bib
@@ -98,6 +98,21 @@
   language = {en}
 }
 
+@article{alves-oliveiraSoftwareArchitectureYOLO2020,
+  title = {Software Architecture for {{YOLO}}, a Creativity-Stimulating Robot},
+  author = {{Alves-Oliveira}, Patr{\'i}cia and Gomes, Samuel and Chandak, Ankita and Arriaga, Patr{\'i}cia and Hoffman, Guy and Paiva, Ana},
+  year = {2020},
+  month = jan,
+  volume = {11},
+  pages = {100461},
+  issn = {23527110},
+  doi = {10.1016/j.softx.2020.100461},
+  abstract = {YOLO is a social robot designed and developed to stimulate creativity in children through storytelling activities. Children use it as a character in their stories. This article details the artificial intelligence software developed for YOLO. The implemented software schedules through several Creativity Behaviors to find the ones that stimulate creativity more effectively. YOLO can choose between convergent and divergent thinking techniques, two important processes of creative thought. These techniques were developed based on the psychological theories of creativity development and on research from creativity experts who work with children. Besides promoting creativity, this software allows the creation of Social Behaviors that enable the robot to behave as a believable character. We built 3 main social behavior parameters: Exuberant, Aloof, and Harmonious. These behaviors are meant to ease immersive play and the process of character creation. The 3 social behaviors were based on psychological theories of personality and developed using children's input during co-design studies. Overall, this work presents the design, development, and usage of social robots that might nurture intrinsic human abilities, such as the ability to be creative.},
+  file = {/home/avnerus/Zotero/storage/GLGGMQRD/Alves-Oliveira et al. - 2020 - Software architecture for YOLO, a creativity-stimu.pdf},
+  journal = {SoftwareX},
+  language = {en}
+}
+
 @inproceedings{alves-oliveiraYOLORobotCreativity2017,
   title = {{{YOLO}}, a {{Robot}} for {{Creativity}}: {{A Co}}-{{Design Study}} with {{Children}}},
   shorttitle = {{{YOLO}}, a {{Robot}} for {{Creativity}}},
@@ -3594,7 +3609,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   issn = {0197-4556},
   doi = {10.1016/j.aip.2007.05.002},
   abstract = {Self-portraiture can be a means of self-reflection and accepting the self. Art therapists can be informed of the benefits and drawbacks of recreating the self by examining the art of artists who experienced melancholy and depression. Vignettes of artists whose self-portraits were healing, as well as of artists who became stuck in feelings of despair, are described. Self-portraiture is an introspective tool that can be beneficial with many client populations. Examples from the literature in art therapy regarding the use of self-portraits in therapy augment the importance of this genre and describe some of the clinical applications of self-portraiture.},
-  file = {/home/avnerus/Zotero/storage/SLXZHEA8/S0197455607000482.html},
+  file = {/home/avnerus/Zotero/storage/CJVVPQDV/Muri - 2007 - Beyond the face Art therapy and self-portraiture.pdf;/home/avnerus/Zotero/storage/SLXZHEA8/S0197455607000482.html},
   journal = {The Arts in Psychotherapy},
   keywords = {Art therapy,Depression,Self-esteem,Self-portraiture},
   language = {en},
