Integrated first parts of article

--- a/aalto.bib
+++ b/aalto.bib
@@ -2028,6 +2028,19 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   number = {1}
 }
 
+@inproceedings{hoffmanDesignEvaluationPeripheral2015,
+  title = {Design and {{Evaluation}} of a {{Peripheral Robotic Conversation Companion}}},
+  booktitle = {2015 10th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
+  author = {Hoffman, Guy and Zuckerman, Oren and Hirschberger, Gilad and Luria, Michal and {Shani-Sherman}, Tal},
+  year = {2015},
+  month = mar,
+  pages = {3--10},
+  issn = {2167-2121},
+  abstract = {We present the design, implementation, and evaluation of a peripheral empathy-evoking robotic conversation companion, Kip1. The robot's function is to increase people's awareness to the effect of their behavior towards others, potentially leading to behavior change. Specifically, Kip1 is designed to promote nonaggressive conversation between people. It monitors the conversation's nonverbal aspects and maintains an emotional model of its reaction to the conversation. If the conversation seems calm, Kip1 responds by a gesture designed to communicate curious interest. If the conversation seems aggressive, Kip1 responds by a gesture designed to communicate fear. We describe the design process of Kip1, guided by the principles of peripheral and evocative. We detail its hardware and software systems, and a study evaluating the effects of the robot's autonomous behavior on couples' conversations. We find support for our design goals. A conversation companion reacting to the conversation led to more gaze attention, but not more verbal distraction, compared to a robot that moves but does not react to the conversation. This suggests that robotic devices could be designed as companions to-human-human interaction without compromising the natural communication flow between people. Participants also rated the reacting robot as having significantly more social human character traits and as being significantly more similar to them. This points to the robot's potential to elicit people's empathy.},
+  file = {/home/avnerus/Zotero/storage/8SAZFNP9/Hoffman et al. - 2015 - Design and Evaluation of a Peripheral Robotic Conv.pdf;/home/avnerus/Zotero/storage/ME4JSSL8/8520619.html},
+  keywords = {Ambient kinetic tangibles,Animation,Behavior change,Design,design goals,design process,Empathy,gaze attention,gesture recognition,human factors,human-human interaction,human-robot interaction,Human-robot interaction,humanoid robots,interactive systems,Kinetic theory,Kip1,Monitoring,nonaggressive conversation,peripheral empathy-evoking robotic conversation companion,reacting robot,robot autonomous behavior,Robot sensing systems,Robotic companions,robotic devices,Shape,Smartphone robots.,social human character traits}
+}
+
 @article{hoffmanDesigningRobotsMovement2014,
   title = {Designing {{Robots With Movement}} in {{Mind}}},
   author = {Hoffman, Guy and Ju, Wendy},
@@ -2122,6 +2135,22 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   lccn = {B2948 .C585 2011},
   number = {48},
   series = {Blackwell Companions to Philosophy}
+}
+
+@inproceedings{hourcadeHCIPeaceCall2011,
+  title = {{{HCI}} for Peace: A Call for Constructive Action},
+  shorttitle = {{{HCI}} for Peace},
+  booktitle = {Proceedings of the 2011 Annual Conference on {{Human}} Factors in Computing Systems - {{CHI}} '11},
+  author = {Hourcade, Juan Pablo and {Bullock-Rest}, Natasha E.},
+  year = {2011},
+  pages = {443},
+  publisher = {{ACM Press}},
+  address = {{Vancouver, BC, Canada}},
+  doi = {10.1145/1978942.1979005},
+  abstract = {Peace is an important value for the human-computer interaction research community, yet it has not resulted in the development of a research sub-community or even a research agenda. In this paper we seek to address this void by first motivating the need for computing research on promoting peace and preventing war. We then review evidence on the factors that affect the likelihood that armed conflict will occur, as well as the aspects involved when individuals make moral decisions on whether or not to support a war. Based on this review, we propose a research agenda, citing research examples from the human-computer interaction literature and discussing new ideas.},
+  file = {/home/avnerus/Zotero/storage/H3JAL3BC/Hourcade and Bullock-Rest - 2011 - HCI for peace a call for constructive action.pdf},
+  isbn = {978-1-4503-0228-9},
+  language = {en}
 }
 
 @article{hovyCanYouTranslate,
@@ -2388,14 +2417,6 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   isbn = {0039-3541},
   journal = {Studies in Art Education},
   number = {4}
-}
-
-@article{kacTELEPRESENCEART,
-  title = {{{TELEPRESENCE ART}}},
-  author = {Kac, Eduardo},
-  pages = {14},
-  file = {/home/avnerus/Zotero/storage/JIBW6MAP/Kac - TELEPRESENCE ART.pdf},
-  language = {en}
 }
 
 @book{kacTelepresenceBioArt2005,
@@ -3514,6 +3535,15 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   series = {Foundations of Human Interaction}
 }
 
+@article{michaudTelepresenceRobotHome,
+  title = {Telepresence {{Robot}} for {{Home Care Assistance}}},
+  author = {Michaud, F},
+  pages = {6},
+  abstract = {Teleoperated from a distant location, a mobile robot with some autonomous capabilities can become a beneficial tool in telehealth applications. Assistive technologies for telementoring in homes constitute a very promising avenue to decrease load on the health care system, reduce hospitalization period and improve quality of life. However, design issues related to such systems are broad and mostly unexplored, but with very few systems currently available commercially. Mobile robots operating in home environments must deal with constrained space and a great variety of obstacles and situations to handle. This paper presents the interdisciplinary design methodology followed to develop Telerobot, a telepresence assistive mobile robot for home care assistance of elderly people. Using field trials with existing platforms, focus groups and interviews, initial requirements for the new mobile robot platform with its augmented video user interfaces are outlined.},
+  file = {/home/avnerus/Zotero/storage/ZCSVML23/Michaud - Telepresence Robot for Home Care Assistance.pdf},
+  language = {en}
+}
+
 @article{middletonThingsSeenUnseen,
   title = {'{{Things Seen}} and {{Unseen}}': {{The Logic}} of {{Incarnation}} in {{Merleau}}-{{Ponty}}'s {{Ontology}} of {{Flesh}}},
   author = {Middleton, Christine},
@@ -3832,6 +3862,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Journal of Advanced Computational Intelligence and Intelligent Informatics},
   language = {en},
   number = {5}
+}
+
+@inproceedings{ogawaTelenoidTelepresenceAndroid2011,
+  title = {Telenoid: Tele-Presence Android for Communication},
+  shorttitle = {Telenoid},
+  booktitle = {{{ACM SIGGRAPH}} 2011 {{Emerging Technologies}} on - {{SIGGRAPH}} '11},
+  author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Taura, Koichi and Minato, Takashi and Ishii, Carlos Toshinori and Ishiguro, Hiroshi},
+  year = {2011},
+  pages = {1--1},
+  publisher = {{ACM Press}},
+  address = {{Vancouver, British Columbia, Canada}},
+  doi = {10.1145/2048259.2048274},
+  file = {/home/avnerus/Zotero/storage/RKJS9MR2/Ogawa et al. - 2011 - Telenoid tele-presence android for communication.pdf},
+  isbn = {978-1-4503-0969-1},
+  language = {en}
 }
 
 @inproceedings{oharaEverydayDwellingWhatsApp2014,
@@ -4372,6 +4417,16 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@article{riekIbnSinaSteps2010,
+  title = {Ibn {{Sina Steps Out}}: {{Exploring Arabic Attitudes Toward Humanoid Robots}}},
+  author = {Riek, Laurel D and Mavridis, Nikolaos and Antali, Shammah and Darmaki, Noura and Ahmed, Zeeshan and {Al-Neyadi}, Maitha and Alketheri, Amina},
+  year = {2010},
+  pages = {7},
+  abstract = {As humanoid robot technology makes its way into the global economy, it is important for robot designers to try to understand the variety of cultural attitudes that exist throughout the world. However, to our knowledge, no one has yet surveyed Middle Eastern attitudes on this topic. We aim to try to bridge this gap. In particular, we wanted to understand how Arabic people might view having humanoid robots in their daily lives, and developed a questionnaire to understand these views. We also built an end-to-end Arabic conversational system on our humanoid robot Ibn Sina, and brought the robot to a mall in the United Arab Emirates. At the mall we encouraged people to interact with the robot as well as complete our questionnaire. With 131 respondents from 21 countries, our findings show significant regional differences in overall attitudes (people from the Gulf viewed humanoid robots more favorably than people from Africa), as well as an effect from college education (people with college degrees viewed humanoid robots less favorably than people without college degrees).},
+  file = {/home/avnerus/Zotero/storage/7XCISD7N/Riek et al. - 2010 - Ibn Sina Steps Out Exploring Arabic Attitudes Tow.pdf},
+  language = {en}
+}
+
 @article{robinsonCyberselfSelfingProject2007,
   title = {The Cyberself: The Self-Ing Project Goes Online, Symbolic Interaction in the Digital Age},
   shorttitle = {The Cyberself},
@@ -4702,6 +4757,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   author = {{SharedStudios}}
 }
 
+@inproceedings{shenStopSeeConflict2018,
+  title = {"{{Stop}}. {{I See}} a {{Conflict Happening}}.": {{A Robot Mediator}} for {{Young Children}}'s {{Interpersonal Conflict Resolution}}},
+  shorttitle = {"{{Stop}}. {{I See}} a {{Conflict Happening}}."},
+  booktitle = {Proceedings of the 2018 {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}}},
+  author = {Shen, Solace and Slovak, Petr and Jung, Malte F.},
+  year = {2018},
+  month = feb,
+  pages = {69--77},
+  publisher = {{ACM}},
+  address = {{Chicago IL USA}},
+  doi = {10.1145/3171221.3171248},
+  file = {/home/avnerus/Zotero/storage/4HNA4RUK/Shen et al. - 2018 - Stop. I See a Conflict Happening. A Robot Media.pdf},
+  isbn = {978-1-4503-4953-6},
+  language = {en}
+}
+
 @article{sheridanMusingsTelepresenceVirtual1992,
   title = {Musings on {{Telepresence}} and {{Virtual Presence}}},
   author = {Sheridan, Thomas B.},
@@ -4757,6 +4828,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   file = {/home/avnerus/Zotero/storage/EUJZ48PL/Shnabel and Nadler - 2008 - A needs-based model of reconciliation Satisfying .pdf},
   journal = {Journal of Personality and Social Psychology},
   language = {en},
+  number = {1}
+}
+
+@article{shneidermanHumanValuesFuture1991,
+  title = {Human Values and the Future of Technology: A Declaration of Responsibility},
+  author = {Shneiderman, Ben},
+  year = {1991},
+  volume = {23},
+  pages = {11--16},
+  publisher = {{ACM New York, NY, USA}},
+  file = {/home/avnerus/Zotero/storage/7H68UA2V/122672.pdf},
+  isbn = {0736-6906},
+  journal = {ACM SIGCHI Bulletin},
   number = {1}
 }
 
@@ -5180,6 +5264,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Organizational identity: A reader}
 }
 
+@inproceedings{tanakaTelepresenceRobotHelps2014,
+  title = {Telepresence Robot Helps Children in Communicating with Teachers Who Speak a Different Language},
+  booktitle = {Proceedings of the 2014 {{ACM}}/{{IEEE}} International Conference on {{Human}}-Robot Interaction - {{HRI}} '14},
+  author = {Tanaka, Fumihide and Takahashi, Toshimitsu and Matsuzoe, Shizuko and Tazawa, Nao and Morita, Masahiko},
+  year = {2014},
+  pages = {399--406},
+  publisher = {{ACM Press}},
+  address = {{Bielefeld, Germany}},
+  doi = {10.1145/2559636.2559654},
+  abstract = {This study reports the advantages of using a child-operated telepresence robot system for the purpose of remote education. Video conferencing is already common in educational settings, where a foreign language is taught by a native teacher from a remote location; however, there is a serious issue in that children tend to have difficulties or freeze when facing teachers who speak a different language over a monitor. We hypothesize that a child-operated telepresence robot that offers physical participation and operability will help to address this issue. To investigate this hypothesis, we conduct a field experiment with 52 participants (4\textendash 8 years old) in classroom environments, and the use of a telepresence robot system is compared with a baseline Skype condition. The results show the advantages of the telepresence robot system for both children and teachers.},
+  file = {/home/avnerus/Zotero/storage/G32Y7MU6/Tanaka et al. - 2014 - Telepresence robot helps children in communicating.pdf},
+  isbn = {978-1-4503-2658-2},
+  language = {en}
+}
+
 @incollection{tateAxolotlFoodSymbol2010,
   title = {The Axolotl as Food and Symbol in the Basin of {{Mexico}}, from 1200 {{BC}} to Today},
   booktitle = {Pre-{{Columbian Foodways}}},
@@ -5532,6 +5631,14 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   isbn = {9781509020652},
   journal = {IEEE/ASME International Conference on Advanced Intelligent Mechatronics, AIM},
   keywords = {Actuators,Actuators in Mechatronic Systems,Rehabilitation Robots}
+}
+
+@article{weilAttentionHabitPraying,
+  title = {Attention and {{Habit}}: {{Praying}} the {{Psalms}} with {{Simone Weil}}},
+  author = {Weil, Simone},
+  pages = {10},
+  file = {/home/avnerus/Zotero/storage/8PY53VFY/Weil - Attention and Habit Praying the Psalms with Simon.pdf},
+  language = {en}
 }
 
 @book{weilGravityGrace2002,
