--- a/aalto.bib
+++ b/aalto.bib
@@ -636,6 +636,22 @@
   number = {1}
 }
 
+@article{buluPlacePresenceSocial2012,
+  title = {Place Presence, Social Presence, Co-Presence, and Satisfaction in Virtual Worlds},
+  author = {Bulu, Saniye Tugba},
+  year = {2012},
+  month = jan,
+  volume = {58},
+  pages = {154--161},
+  issn = {03601315},
+  doi = {10.1016/j.compedu.2011.08.024},
+  abstract = {This study investigated the relationship among three types of presences, including place presence, social presence, and co-presence in virtual worlds and their relationship with satisfaction and immersive tendencies of students. Students' scores on a subjective questionnaire were analyzed. The results indicated that there was a significant relationship among the place presence, social presence, and copresence. While social presence seemed to affect the satisfaction most, place and co-presence also affected students' satisfaction in the virtual world. Moreover, immersive tendencies of the students were related to their place and co-presence but not to their social presence. Findings highlighted the important issues for the design of virtual world environments to increase presence and satisfaction of students.},
+  file = {/home/avnerus/Zotero/storage/ELXQI5QT/Bulu - 2012 - Place presence, social presence, co-presence, and .pdf},
+  journal = {Computers \& Education},
+  language = {en},
+  number = {1}
+}
+
 @article{burgoonAdaptationDyadicInteraction1993,
   title = {Adaptation in {{Dyadic Interaction}}: {{Defining}} and {{Operationalizing Patterns}} of {{Reciprocity}} and {{Compensation}}},
   shorttitle = {Adaptation in {{Dyadic Interaction}}},
@@ -2910,12 +2926,6 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {2015},
   pages = {33--43},
   publisher = {{Springer}}
-}
-
-@misc{leedshackerspaceMakingMachinableWax,
-  title = {Making Machinable Wax | {{Leeds Hackspace}}},
-  author = {Leeds Hackerspace},
-  language = {en-US}
 }
 
 @misc{leedshackerspaceMakingMachinableWaxa,
