Did ethical considerations

--- a/aalto.bib
+++ b/aalto.bib
@@ -1952,6 +1952,16 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   publisher = {{Springer}}
 }
 
+@inproceedings{hewstoneLivingApartLiving2009,
+  title = {Living Apart, Living Together? {{The}} Role of Intergroup Contact in Social Integration},
+  booktitle = {Proceedings of the {{British Academy}}},
+  author = {Hewstone, Miles},
+  year = {2009},
+  volume = {162},
+  pages = {243--300},
+  file = {/home/avnerus/Zotero/storage/67SXRPGS/Hewstone - 2009 - Proceedings of the British Academy, Volume 162, 20.pdf}
+}
+
 @article{heymanSocialMediaDelinguistification2015,
   title = {Social {{Media}}, {{Delinguistification}} and {{Colonization}} of {{Lifeworld}}: {{Changing Faces}} of {{Facebook}}},
   shorttitle = {Social {{Media}}, {{Delinguistification}} and {{Colonization}} of {{Lifeworld}}},
@@ -4548,6 +4558,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   file = {/home/avnerus/Zotero/storage/DUFUSNNW/2012-28154-005.html},
   isbn = {978-1-84872-114-2 978-1-84872-054-1 978-0-203-09546-1},
   keywords = {Attitudes,Disadvantaged,Ingroup Outgroup,Intergroup Dynamics,Interpersonal Control,Social Change,Social Perception,Socioeconomic Class Attitudes}
+}
+
+@article{salemAntinormalizationDiscourseContext2005,
+  title = {The Anti-Normalization Discourse in the Context of {{Israeli}}-{{Palestinian}} Peace-Building},
+  author = {Salem, Walid},
+  year = {2005},
+  volume = {12},
+  pages = {100},
+  publisher = {{Middle East Publications}},
+  file = {/home/avnerus/Zotero/storage/NL9YETHJ/ProQuestDocuments-2020-06-27.pdf},
+  isbn = {0793-1395},
+  journal = {Palestine-Israel Journal of Politics, Economics, and Culture},
+  number = {1}
 }
 
 @book{sandoleHandbookConflictAnalysis2009,
