--- a/aalto.bib
+++ b/aalto.bib
@@ -357,6 +357,16 @@
   number = {9}
 }
 
+@article{becker-asanoEXPLORINGUNCANNYVALLEY2010,
+  title = {{{EXPLORING THE UNCANNY VALLEY WITH GEMINOID HI}}-1 {{IN A REAL}}-{{WORLD APPLICATION}}},
+  author = {{Becker-Asano}, Christian and Ogawa, Kohei and Nishio, Shuichi and Ishiguro, Hiroshi},
+  year = {2010},
+  pages = {9},
+  abstract = {This paper presents a qualitative analysis of 24 interviews with visitors of the ARS Electronica festival in September 2009 in Linz, Austria, who interacted with the android robot Geminoid HI-1, while it was tele-operated by the first author. Only 37.5\% of the interviewed visitors reported an uncanny feeling with 29\% even enjoying the conversation. In five cases the interviewees' feelings even changed during the interaction with Geminoid HI-1. A number of possible improvements regarding Geminoid's bodily movements, facial expressivity, and ability to direct its gaze became apparent, which inform our future research with and development of android robots.},
+  file = {/home/avnerus/Zotero/storage/RR4KXCPX/Becker-Asano et al. - 2010 - EXPLORING THE UNCANNY VALLEY WITH GEMINOID HI-1 IN.pdf},
+  language = {en}
+}
+
 @article{belkExtendedSelfDigital2013,
   title = {Extended {{Self}} in a {{Digital World}}: {{Table}} 1.},
   shorttitle = {Extended {{Self}} in a {{Digital World}}},
@@ -3879,6 +3889,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   doi = {10.20965/jaciii.2011.p0592},
   abstract = {This paper describes two field tests conducted with visitors to shopping mall and with aged persons. For both of the field tests, we used an android we developed which is called ``Telenoid R1'' or `Telenoid'' for short. For both field tests we interviewed visitors regarding their impressions of the Telenoid. The results of the shopping mall showed that almost half of the interviewed visitors reported having negative feelings toward the Telenoid. But once they gave the Telenoid a hug, they changed their opinions from negative to positive. Meanwhile, the results of the other test showed that the majority of aged persons reported having a positive opinion. As a remarkable point, all aged persons who interacted with the Telenoid gave it a hug without any specific instruction from us. These results show that the Telenoid must be an acceptable medium for the elderly. However, the Telenoid might also be acceptable for younger persons because the visitors we interviewed developed positive feelings toward the robot after giving it a hug. These results inform our future research working with and developing androids.},
   file = {/home/avnerus/Zotero/storage/ZNEIAV7J/Ogawa et al. - 2011 - Exploring the Natural Reaction of Young and Aged P.pdf},
+  journal = {Journal of Advanced Computational Intelligence and Intelligent Informatics},
+  language = {en},
+  number = {5}
+}
+
+@article{ogawaExploringNaturalReaction2011a,
+  title = {Exploring the {{Natural Reaction}} of {{Young}} and {{Aged Person}} with {{Telenoid}} in a {{Real World}}},
+  author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Balistreri, Giuseppe and Watanabe, Tetsuya and Ishiguro, Hiroshi and {ATR Intelligent Robotics and Communication Laboratory, 2-2-2 Hikaridai, Seikacho, Souraku-gun, Kyoto 619-0288, Japan} and {Graduate School of Engineering Science, Osaka University, 1-3 Machikaneyama, Toyonaka, Osaka 560-8531, Japan} and {Dipartimento di Ingegneria Informatica, Universit\`a degli Studi di Palermo, Viale delle Scienze, Edificio 690128 Palermo, Italia}},
+  year = {2011},
+  month = jul,
+  volume = {15},
+  pages = {592--597},
+  issn = {1883-8014, 1343-0130},
+  doi = {10.20965/jaciii.2011.p0592},
+  abstract = {This paper describes two field tests conducted with visitors to shopping mall and with aged persons. For both of the field tests, we used an android we developed which is called ``Telenoid R1'' or `Telenoid'' for short. For both field tests we interviewed visitors regarding their impressions of the Telenoid. The results of the shopping mall showed that almost half of the interviewed visitors reported having negative feelings toward the Telenoid. But once they gave the Telenoid a hug, they changed their opinions from negative to positive. Meanwhile, the results of the other test showed that the majority of aged persons reported having a positive opinion. As a remarkable point, all aged persons who interacted with the Telenoid gave it a hug without any specific instruction from us. These results show that the Telenoid must be an acceptable medium for the elderly. However, the Telenoid might also be acceptable for younger persons because the visitors we interviewed developed positive feelings toward the robot after giving it a hug. These results inform our future research working with and developing androids.},
+  file = {/home/avnerus/Zotero/storage/WT73DM4X/Ogawa et al. - 2011 - Exploring the Natural Reaction of Young and Aged P.pdf},
   journal = {Journal of Advanced Computational Intelligence and Intelligent Informatics},
   language = {en},
   number = {5}
