--- a/aalto.bib
+++ b/aalto.bib
@@ -1795,6 +1795,21 @@ Although derived from a relatively small number of studies, these results sugges
   number = {1}
 }
 
+@article{gublerHumanizingOutgroupContexts2015,
+  title = {Humanizing the {{Outgroup}} in {{Contexts}} of {{Protracted Intergroup Conflict}}},
+  author = {Gubler, Joshua Ronald and Halperin, Eran and Hirschberger, Gilad},
+  year = {2015},
+  volume = {2},
+  pages = {36--46},
+  issn = {2052-2630, 2052-2649},
+  doi = {10.1017/xps.2014.20},
+  abstract = {Current approaches to humanizing members of an outgroup in contexts marked by protracted intergroup conflict see mixed success. In both Study 1, conducted on a random sample of Israeli Jews (N = 103), and Study 2, conducted on a nationally diverse sample of Israeli Jews (N = 670), we experimentally test the effect of a unique approach to humanizing the outgroup based on empathy. Instead of requiring individuals to express empathy for outgroup suffering they might have caused, this approach requires an expression of empathy for suffering unrelated to the conflict between the groups. Results suggest that such an expression of empathy from one group member toward the other group can lead to ``reciprocal empathy'' which facilitates a greater willingness to accept the humanity of all members of the other group.},
+  file = {/home/avnerus/Zotero/storage/K82MDYAQ/Gubler et al. - 2015 - Humanizing the Outgroup in Contexts of Protracted .pdf},
+  journal = {Journal of Experimental Political Science},
+  language = {en},
+  number = {1}
+}
+
 @book{habermasTheoryCommunicativeAction1984,
   title = {The Theory of Communicative Action},
   author = {Habermas, J{\"u}rgen},
@@ -2648,6 +2663,21 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   primaryClass = {cs, eess, stat}
 }
 
+@article{kashianSelfdisclosureLikingComputermediated2017,
+  title = {Self-Disclosure and Liking in Computer-Mediated Communication},
+  author = {Kashian, Nicole and Jang, Jeong-woo and Shin, Soo Yun and Dai, Yue and Walther, Joseph B.},
+  year = {2017},
+  month = jun,
+  volume = {71},
+  pages = {275--283},
+  issn = {07475632},
+  doi = {10.1016/j.chb.2017.01.041},
+  abstract = {This research investigated the process by which self-disclosure leads to liking in computer-mediated communication (CMC). Research has shown that CMC influences the attributions that individuals make regarding self-disclosure as well as the affection that they feel towards disclosers as a result of these attributions. However, little is known about the impact that attributions have on one's own reciprocal self-disclosure. In an original experiment, dyads of friends or strangers disclosed to one another in text-based CMC. After their discussion, a questionnaire assessed participants' liking toward their partners as well as their attributions regarding their partners' behavior. Results show that selfdisclosure prompted receivers' interpersonal attributions, which led receivers to like their partners. But, receivers' interpersonal attributions did not lead to reciprocal disclosure. The results corroborate Jiang, Bazarova, and Hancock's (2011) model that links self-disclosure and liking by way of interpersonal attributions, and demonstrate one disclosure-liking effect in CMC: People like those who self-disclose to them. This study provides further evidence for CMC's unique impact on the relationship between selfdisclosure and liking, and contributes to our understanding of the interpersonal processes that lead to liking in CMC.},
+  file = {/home/avnerus/Zotero/storage/5HH65WSY/Kashian et al. - 2017 - Self-disclosure and liking in computer-mediated co.pdf},
+  journal = {Computers in Human Behavior},
+  language = {en}
+}
+
 @inproceedings{katayamaSharingPositionalRelationship2018,
   title = {Sharing the {{Positional Relationship}} with the {{Bidirectional Telepresence Robots}}},
   booktitle = {2018 {{IEEE}} 22nd {{International Conference}} on {{Computer Supported Cooperative Work}} in {{Design}} (({{CSCWD}}))},
@@ -3256,6 +3286,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   title = {Let's {{Robot}} - {{User Created Robotic Telepresence Network}}},
   file = {/home/avnerus/Zotero/storage/Y4WBMYV3/letsrobot.tv.html},
   howpublished = {https://letsrobot.tv/}
+}
+
+@article{leyensEmotionalSidePrejudice2000,
+  title = {The {{Emotional Side}} of {{Prejudice}}: {{The Attribution}} of {{Secondary Emotions}} to {{Ingroups}} and {{Outgroups}}},
+  shorttitle = {The {{Emotional Side}} of {{Prejudice}}},
+  author = {Leyens, Jacques-Philippe and Paladino, Paola M. and {Rodriguez-Torres}, Ramon and Vaes, Jeroen and Demoulin, St{\'e}phanie and {Rodriguez-Perez}, Armando and Gaunt, Ruth},
+  year = {2000},
+  month = may,
+  volume = {4},
+  pages = {186--197},
+  issn = {1088-8683, 1532-7957},
+  doi = {10.1207/S15327957PSPR0402_06},
+  file = {/home/avnerus/Zotero/storage/QRRCQSS3/Leyens et al. - 2000 - The Emotional Side of Prejudice The Attribution o.pdf},
+  journal = {Personality and Social Psychology Review},
+  language = {en},
+  number = {2}
 }
 
 @article{liBenefitBeingPhysically2015,
