Soon submitting to SKR

--- a/aalto.bib
+++ b/aalto.bib
@@ -2010,6 +2010,22 @@
   keywords = {actuators,Actuators,bending axis,composite materials,conformal covering,constrain motion,control system synthesis,design guideline,displacement capability,end effectors,Fabrication,fabrication guideline,fiber-reinforced soft actuators,fiber-reinforced soft bending actuator,Force,force capability,gripping force,Laminates,mechanically programmable bend radius,moulding,multistep molding,rectangular object matching,Rubber,Strain,two-digit end-effector design}
 }
 
+@article{geDesignModelingEvaluation2020,
+  title = {Design, {{Modeling}}, and {{Evaluation}} of {{Fabric}}-{{Based Pneumatic Actuators}} for {{Soft Wearable Assistive Gloves}}},
+  author = {Ge, Lisen and Chen, Feifei and Wang, Dong and Zhang, Yifan and Han, Dong and Wang, Tao and Gu, Guoying},
+  year = {2020},
+  month = oct,
+  volume = {7},
+  pages = {583--596},
+  issn = {2169-5172, 2169-5180},
+  doi = {10.1089/soro.2019.0105},
+  abstract = {Textile fabrics are compliant, lightweight, and inherently anisotropic, making them promising for the design of soft pneumatic actuators. In this article, we present the design, modeling, and evaluation of a class of soft fabricbased pneumatic actuators (SFPAs) for soft wearable assistive gloves that can simultaneously assist the thumb abduction and finger flexion and extension motions for brachial plexus injury patients. We investigate the mechanical behaviors of various woven fabrics and rib weft-knitted fabric structures, guiding us to design a thumb-abduction SFPA, a finger-flexion SFPA, and a finger-extension SFPA. We further develop a mathematical model to evaluate the influence of the geometric parameters on the blocked tip forces of the fingerflexion SFPAs and extension torques of the finger-extension SFPAs, which are also verified by the experimental results. We then integrate our SFPAs into a soft wearable assistive glove with a portable control system. The glove is finally tested on a healthy volunteer and a brachial plexus injury patient. The clinical evaluation results demonstrate the effectiveness of our designed glove in assisting hand motions and grasping tasks.},
+  file = {/home/avnerus/Zotero/storage/2CY4MUPK/Ge et al. - 2020 - Design, Modeling, and Evaluation of Fabric-Based P.pdf},
+  journal = {Soft Robotics},
+  language = {en},
+  number = {5}
+}
+
 @book{geSocialRobotics4th2012,
   title = {Social {{Robotics}}: 4th {{International Conference}}, {{ICSR}} 2012, {{Chengdu}}, {{China}}, {{October}} 29-31, 2012. {{Proceedings}}},
   shorttitle = {Social {{Robotics}}},
@@ -3405,6 +3421,21 @@
   year = {2012},
   pages = {138--147},
   publisher = {{Springer}}
+}
+
+@book{koskinenDesignResearchPractice2011,
+  title = {Design Research through Practice: From the Lab, Field, and Showroom},
+  shorttitle = {Design Research through Practice},
+  editor = {Koskinen, Ilpo Kalevi},
+  year = {2011},
+  publisher = {{Morgan Kaufmann/Elsevier}},
+  address = {{Waltham, MA}},
+  annotation = {OCLC: ocn714729504},
+  file = {/home/avnerus/Zotero/storage/4PVCQ9XX/Koskinen - 2011 - Design research through practice from the lab, fi.pdf},
+  isbn = {978-0-12-385502-2},
+  keywords = {Industrial design},
+  language = {en},
+  lccn = {TS170 .D47 2011}
 }
 
 @article{kouluHowWillAI2019,
